Good-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-spring-petclinic
  labels:
    app.kubernetes.io/name: spring-petclinic
    owner: yonekura
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-petclinic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-petclinic
    spec:
      containers:
        - name: spring-petclinic
          image: "quay.io/yakiyoshi/spring-petclinic:2.4.5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
