ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic
  labels:
    app.kubernetes.io/name: spring-petclinic
spec:
  rules:
  - host: spring-petclinic.apps.ocp01.vlan1014.cnta.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-petclinic
            port:
              number: 8080
