all_deployment_must_have_owner.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: deployment-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  parameters:
    labels: ["owner"]
